force-app/main/default/objects/ssot__HealthcareProviderTaxonomy__dlm/fields/ssot__HealthcareTaxonomyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareTaxonomyId__c</fullName>
    <label>Healthcare Taxonomy</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareTaxonomyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>