force-app/main/default/objects/ssot__HealthcareProviderTaxonomy__dlm/fields/ssot__IsPrimaryTaxonomy__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryTaxonomy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Taxonomy</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryTaxonomy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>