force-app/main/default/objects/ssot__HealthcareProviderTaxonomy__dlm/fields/ssot__rel_1742526785235_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742526785235_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareProviderTaxonomy_Healthcar_rel</label>
    <referenceTo>ssot__HealthcareTaxonomy__dlm</referenceTo>
    <relationshipLabel>HealthcareProviderTaxonomy_Healthcar_rel</relationshipLabel>
    <relationshipName>rel_1742526785235_end</relationshipName>
    <type>Lookup</type>
</CustomField>